fix header alignment

--- a/src/components/banner/banner.module.scss
+++ b/src/components/banner/banner.module.scss
@@ -39,7 +39,7 @@
                     align-self: center;
                     color: white;
                     font-size: 0.9rem;
-                    font-weight: bold;
+                    // font-weight: bold;
                     line-height: 2.4rem;
                     margin: 8px 5px;
                 }
