--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -19,12 +19,17 @@
         width: 90%;
         z-index: 2;
         h1 {
+            padding-bottom: 10px;
             margin: 0;
             a {
                 color: $inscopeBlue;
                 font-size: 1.5rem;
                 font-weight: bold;
                 line-height: 1.1;
+                img {
+                    margin-left: -25px;
+                    width: 180px;
+                }
             }
         }
         nav {
@@ -44,13 +49,13 @@
                 -webkit-tap-highlight-color: transparent;
             }
             .toggle1 {
-                transform: rotate(-45deg) translate(-3px, 8px);
+                transform: rotate(-45deg) translate(-3px, 7.5px);
             }
             .toggle2 {
                 opacity: 0;
             }
             .toggle3 {
-                transform: rotate(45deg) translate(-3px, -8px);
+                transform: rotate(45deg) translate(-3px, -7.5px);
             }
             ul {
                 display: none;
@@ -85,7 +90,7 @@
         ul {
             @include flex(column, center);
             align-items: center;
-            height: 240px;
+            height: 200px;
             list-style: none;
             margin: 0;
             li {
@@ -141,7 +146,10 @@ html:not([data-scroll="0"]) {
             width: 90%;
             h1 a {
                 font-size: 1.8rem;
-                // margin: 0;
+                img {
+                    margin-left: -32px;
+                    width: 220px;
+                }
             }
             nav {
                 .burger {
