--- a/src/components/section/section.module.scss
+++ b/src/components/section/section.module.scss
@@ -18,12 +18,15 @@
     .contentContainer {
         @include flex (column, center);
         h4 {
-            font-size: 2rem;
+            font-size: 1.8rem;
             margin: 20px auto 10px;
             text-align: center;
         }
         p {
-            margin: 10px auto 20px;
+            color: $mediumGrey;
+            margin: 10px auto;
+            max-width: 400px;
+            text-align: center;
         }
         .linkBtn {
             border: 2px solid rgba(0,0,0,0);
@@ -35,8 +38,13 @@
         a {
             background: $salmonBerry;
             color: rgb(255,255,255);
-            margin: 20px auto;
+            margin: 10px auto 40px;
             padding: 10px 20px;
+            transition: all 200ms ease-in-out;
+            &:hover {
+                box-shadow: -1px 1px 6px rgba(0,0,0,0.6);
+                background: rgb(221, 66, 58);
+            }
         }
     }
 }
@@ -61,18 +69,24 @@
             height: 400px;
             width: 400px;
             h4 {
-                padding: 10px;
                 width: 90%;
             }
             p {
+                margin: 20px auto;
                 width: 85%;
             }
             a {
-                padding: 0.7rem 1.3rem;
+                margin: 20px auto;
             }
         }
     }
     .section:nth-child(odd) {
         flex-direction: row-reverse;
+    }
+}
+
+@media (min-width: 1024px) {
+    .section:last-child {
+        margin-bottom: 80px;
     }
 }
